🐞 fix(API): Fix keyGen and Verify
