# api/docs/swagger.yaml
@@ -58,10 +58,6 @@ definitions:
         type: string
       name:
         type: string
-      provider:
-        type: string
-      role:
-        type: string
       updated_at:
         type: string
     type: object
