# api/internal/app/app.go
@@ -34,21 +34,7 @@ func NewAPP() (app *fiber.App) {
 		AllowCredentials: true,
 	}))
 
-	app.Get("/swagger/*", swagger.HandlerDefault) // default
-
-	app.Get("/swagger/*", swagger.New(swagger.Config{ // custom
-		URL:         "http://example.com/doc.json",
-		DeepLinking: false,
-		// Expand ("list") or Collapse ("none") tag groups by default
-		DocExpansion: "none",
-		// Prefill OAuth ClientId on Authorize popup
-		OAuth: &swagger.OAuthConfig{
-			AppName:  "OAuth Provider",
-			ClientId: "21bb4edc-05a7-4afc-86f1-2e151e4ba6e2",
-		},
-		// Ability to change OAuth2 redirect uri location
-		OAuth2RedirectUrl: "http://localhost:3000/swagger/oauth2-redirect.html",
-	}))
+	app.Get("/docs/*", swagger.HandlerDefault)
 
 	api := NewAPI()
 	app.Mount("/api", api)
